# peptide_prediction

./: .claudeignore  .coderabbit.yaml  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  Analysing_final_results.py  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  COWORK_PROMPT_UI_REDESIGN.md  DEPLOYMENT.md  Final_merged_databases.xlsx  LICENSE  LICENSE-DESY-RESEARCH.md  Makefile  README.md  README_EXPLAINER.md  REPO_TREE.txt  ROADMAP.md  SMOKE_TESTS.md  auxiliary.py  jpred.py  main.py  mkdocs.yml  tango.py
.claude/: WORKFLOW.md  settings.json
.github/: dependabot.yml  pull_request_template.md
Tango/: P05953.txt  P08808.txt  Tango_run.bat
backend/: .dockerignore  .env.example  Analysing_final_results.py  CLAUDE.md  _app_preload.py  _perf_init.py  auxiliary.py  batch_process.py  biochemCalculation.py  biochem_calculation.py  celery_app.py  config.py  consensus.py  feedback.jsonl  jpred.py  main.py  psipred.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  s4pred.py  server.py  tango.py  tasks.py
checks/: preflight.sh  smoke_uniprot.sh  verify_tango_path.py
docker/: Caddyfile  Dockerfile.backend  Dockerfile.frontend  docker-compose.base.yml  docker-compose.caddy.yml  docker-compose.ghcr.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf
docs/: ARCHITECTURE.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CONFIG_MATRIX.md  CORRECTNESS_DELTA_REPORT.md  DEVELOPER_REFERENCE.md  DEV_CONTEXT.md  DOCKER_RUNBOOK.md  EXECUTION_PATHS.md  FAILURE_MODES.md  IMPLEMENTATION_STATUS.md  ISSUE_REGISTER.md  KNOWLEDGE_INDEX.md  MASTER_GUIDE.md  MEETING_WALKTHROUGH.md  MERGE_CONFLICT_RESOLUTION.md  NEXT_STEPS_AFTER_DOCKER.md  NEXT_UI_S4PRED_PLAN.md  PHASE1_AUDIT_REPORT.md  PHASE_3_2_TRIAGE.md  README.md  REFACTOR_PLAN.md  REF_IMPL_DIFF_REPORT.md  REF_IMPL_FULL_WALKTHROUGH.md  (+9 more)
mcp_server/: README.md  pyproject.toml
mcp_server/pvl_mcp/: __init__.py  __main__.py  _client.py  prompts.py  server.py  tools.py
mcp_server/tests/: conftest.py  test_client.py  test_prompts.py  test_server.py  test_tools.py
(+725 files in other folders)
